--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <span class="author-block">
                 <a href="https://scholar.google.com/citations?user=hOYpbsAAAAAJ&hl=zh-CN" target="_blank">Ruibin Yuan</a>,&nbsp;</span>
                 <span class="author-block">
-                <a href="https://scholar.google.com/citations?user=Vl1X_-sAAAAJ&hl=zh-CN" target="_blank">Xiaowei Chi</a></span>
+                <a href="https://scholar.google.com/citations?user=Vl1X_-sAAAAJ&hl=zh-CN" target="_blank">Xiaowei Chi</a>,&nbsp;</span>
 				<span class="author-block">
 				<a href="https://github.com/lmfethan" target="_blank">Mengfei Li</a>,&nbsp;</span>
                 <span class="author-block">
@@ -206,13 +206,13 @@
       </center>
 	  <div align="center"><p style="text-align:justify; text-justify:inter-ideograph;width:100%">
 		Figure 2. The pipeline of dataset construction. Head and tail audios as well as the corresponding 
-		transcripts are fed into the pipeline to generate a smooth and high quality transition..
+		transcripts are fed into the pipeline to generate a smooth and high quality transition.
       <!-- </h2> -->
     </div>
       <p style="text-align:justify; text-justify:inter-ideograph;width:100%">The details involve the following steps:</p>
 
       <b>&#9734; Segmentation and Emotion Labeling</b>:  We first divide the previously aligned single emotion co-speech gesture datasets into head and tail segments by splitting the original audio into 4-second clips. 
-	  Heads are identified as clips with neutral emotions, while tails contain various emotions..
+	  Heads are identified as clips with neutral emotions, while tails contain various emotions.
 
       <br>
 
